[tool.poetry]
name = "cortexapps-cli"
version = "0.0.6-alpha"
description = "Command Line Interface for cortexapps"
license = "MIT"
authors = [
    "Cortex Apps <cortexapps@cortex.io>",
]
readme = "README.pypi.md"
packages = [{include = "cortexapps_cli"}]

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.11"
requests = ">= 2.3.0, < 3"
pyyaml = ">= 6.0.1, < 7"

[tool.poetry.scripts]
cortex = "cortexapps_cli.cortex:cli"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
homepage = "https://github.com/cortexapps/cli"
"Bug Tracker" = "https://github.com/python-poetry/poetry/issues"

[tool.pytest.ini_options]
minversion = "7.4.3"
addopts = "--cov=cortexapps_cli --cov-report term-missing"
testpaths = [
    "tests"
]
