[tool.poetry]
name = "cortexapps-cli"
# version will be incremented via command line as part of github actions build
version = "0.0.0"
description = "Command Line Interface for cortexapps"
license = "MIT"
authors = [
    "Cortex Apps <cortexapps@cortex.io>",
]
readme = "README.rst"
packages = [{include = "cortexapps_cli"}]

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.4"
pyyaml = ">= 6.0.1, < 7"
urllib3 = ">= 2.2.2"
typer = "^0.12.5"
click = "<8.2"

[tool.poetry.scripts]
cortex = "cortexapps_cli.cli:app"

[tool.poetry.group.test.dependencies]
pytest = "^8.2.2"
pytest-cov = "^5.0.0"


[tool.poetry.group.dev.dependencies]
pytest-xdist = "^3.6.1"
responses = "^0.25.3"
pytest-html = "^4.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
Homepage = "https://github.com/cortexapps/cli"
"Bug Tracker" = "https://github.com/cortexapps/cli/issues"
"Changes" = " https://github.com/cortexapps/cli/blob/main/HISTORY.md"
"Documentation" = " https://github.com/cortexapps/cli/blob/main/README.rst"

[tool.pytest.ini_options]
markers = [
    "serial"
]
minversion = "7.4.3"
addopts = "--cov=cortexapps_cli --cov-append --cov-report term-missing"
testpaths = [
    "tests"
]
